# mosaic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: backend.yml  ci.yml  web.yml
mosaic-fi/: Cargo.toml
mosaic-fi/masm/accounts/: book.masm
mosaic-fi/masm/notes/: client_request_for_quote.masm  desk_update_status.masm  lp_liquidity_offer.masm
mosaic-fi/src/: account.rs  lib.rs  note.rs
mosaic-mcp/: Cargo.toml
mosaic-mcp/src/: lib.rs  tools.rs
mosaic-miden/: Cargo.toml
mosaic-miden/src/: account.rs  client.rs  lib.rs  note.rs  store.rs  symbol.rs  version.rs
mosaic-serve/: Cargo.toml
mosaic-serve/src/: asset_store.rs  desk_store.rs  lib.rs
mosaic-serve/tests/: README.md  concurrency_tests.rs
mosaic-server/: Cargo.toml
mosaic-server/src/: helper.rs  main.rs  oauth.rs  user_mcp_handler.rs  user_session_manager.rs
mosaic-web/: README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  proxy.ts
mosaic-web/app/: globals.css  layout.tsx  page.tsx
mosaic-web/app/api/auth/me/: route.ts
mosaic-web/app/api/auth/token/: route.ts
mosaic-web/app/assets/: page.tsx
mosaic-web/app/desk/[deskId]/: page.tsx
mosaic-web/app/market/[base]/[quote]/: page.tsx
mosaic-web/app/market/[marketId]/: page.tsx
mosaic-web/app/markets/: page.tsx
mosaic-web/app/settings/: page.tsx  settings-client.tsx
mosaic-web/app/test/: page.tsx
mosaic-web/app/workbench/: page.tsx  workbench-client.tsx
mosaic-web/components/: mobile-warning.tsx  navigation.tsx  order-book.tsx  sidebar.tsx
mosaic-web/components/auth/: login-button.tsx  logout-button.tsx  user-profile.tsx
mosaic-web/lib/: account.ts  asset-format.ts  market-storage.ts  marketStorage.ts  mcp-client.ts  mcp-tool.ts  server-auth.ts
