[package]
name = "mosaic-fi"
version = "0.1.0"
edition = "2024"

[dependencies]
mosaic-miden = { path = "../mosaic-miden" }
miden-objects = { version = "0.11.4", default-features = false, features = ["testing"] }
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
futures = "0.3"
uuid = "1.18.1"
uuid7 = "1.2.0"
hex = "0.4.3"
schemars = "1.0.4"

[dev-dependencies]
miden-client = { version = "0.11.9", features = ["testing"] }
miden-assembly = "0.17.1"
miden-lib = { version = "0.11.4", features = ["testing"] }