[package]
name = "mosaic-mcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "mosaic_mcp"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "0.8.1", features = [
    "server",
    "macros",
    "client",
    "transport-streamable-http-server",
    "schemars",
] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs", "signal"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
