[package]
name = "mosaic-mcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "mosaic_mcp"
path = "src/lib.rs"

[dependencies]
mosaic-fi = { path = "../mosaic-fi" }
mosaic-miden = { path = "../mosaic-miden" }
mosaic-serve = { path = "../mosaic-serve" }
rmcp = { version = "0.8.3", features = [
    "server",
    "macros",
    "client",
    "transport-streamable-http-server",
    "schemars",
] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs", "signal"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
sha2 = "0.10"
