[package]
name = "mosaic-miden"
version = "0.1.0"
edition = "2024"

[dependencies]
miden-client = { version = "0.11.6", features = ["testing", "tonic", "sqlite"] }
miden-lib = { version = "0.11.4", default-features = false }
miden-objects = { version = "0.11.4", default-features = false, features = ["testing"] }
miden-crypto = { version = "0.15.9", features = ["executable"] }
miden-assembly = "0.17.1"
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
tokio = { version = "1.46", features = ["rt-multi-thread", "net", "macros", "fs"] }
rand_chacha = "0.9.0"
futures = "0.3"
uuid = "1.18.1"
hex = "0.4.3"
